<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Radar RTX</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logintext">Username</string>
    <string name="loginpass">Password</string>
    <string name="registerbut">Register</string>
    <string name="loginbut">Connect</string>
    <string name="title_activity_event">Events</string>
    <string name="select_event">Select Event</string>
    <string name="title_activity_event_join">Join a Team</string>
    <string name="eventname">Event Name:</string>
    <string name="teamonename">Team 1 Name:</string>
    <string name="teamtwoname">Team 2 Name:</string>
    <string name="eventmaxplayertext">Max Players:</string>

    <string-array name="eventmatchtypelst">
        <item>Free For All</item>
        <item>Team Death Match</item>
        <item>Clan War</item>
    </string-array>
    <string-array name="notificationLevel">
        <item>Low Priority</item>
        <item>High Priority</item>
        <item>Urgent</item>
    </string-array>

    <string name="eventaddbuttext">Add Event</string>
    <string name="title_activity_note_acti">Send Notification</string>
    <string name="title_activity_player_state">Player List</string>
    <string name="title_activity_replay">Replay</string>
    <string name="title_activity_event_add">Add Event</string>
    <string name="title_activity_event_location">EventLocation</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_replayer">ReplayerActivity</string>
    <string name="replay_play">Play</string>
    <string name="replay_pause">Pause</string>

</resources>
