<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent" >
    
    <TableRow>
	    <TextView
	        android:id = "@+id/eventname"
	        android:layout_width = "wrap_content"
	        android:layout_height = "wrap_content"
	        android:text = "@string/eventname"
	        />
	    <EditText
	        android:id = "@+id/eventedit"
	        android:inputType = "text"
	        android:layout_width = "wrap_content"
	        android:layout_height = "wrap_content"
	        />
    </TableRow>
    
    <TableRow>
		<TextView
		    android:id = "@+id/teamonename"
		    android:layout_width = "fill_parent"
	        android:layout_height = "wrap_content"
	        android:text = "@string/teamonename"
	        />
		<EditText
	        android:id = "@+id/teamoneedit"
	        android:inputType = "text"
	        android:layout_width = "fill_parent"
	        android:layout_height = "wrap_content"
	        />
	</TableRow>
	<TableRow>
		<TextView
		    android:id = "@+id/teamtwoname"
		    android:layout_width = "fill_parent"
	        android:layout_height = "wrap_content"
	        android:text = "@string/teamtwoname"
	        />
		<EditText
	        android:id = "@+id/teamtwoedit"
	        android:inputType = "text"
	        android:layout_width = "fill_parent"
	        android:layout_height = "wrap_content"
	        />
	</TableRow>
	<TableRow>
		<TextView
		    android:id = "@+id/eventmaxplayer"
		    android:layout_width = "fill_parent"
	        android:layout_height = "wrap_content"
	        android:text = "@string/eventmaxplayertext"
	        />
		<EditText
	        android:id = "@+id/eventmaxplayeredit"
	        android:inputType = "text"
	        android:layout_width = "fill_parent"
	        android:layout_height = "wrap_content"
	        />
	</TableRow>

	<Spinner
	    android:id = "@+id/eventmatchtype"
	    android:layout_width = "wrap_content"
	    android:layout_height = "wrap_content"
	    android:drawSelectorOnTop = "true" />
	<Button
	    android:id = "@+id/eventaddbut"
	    android:layout_width = "fill_parent"
	    android:layout_height = "wrap_content"
	    android:text = "@string/eventaddbuttext"
	    />
</TableLayout>
