<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width = "fill_parent"
    android:layout_height = "fill_parent"
    android:orientation = "vertical"
    android:id = "@+id/RLayout">
    
    <TextView
        android:id = "@+id/textuseremail"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/logintext" 
        android:layout_alignParentTop = "true"
        android:layout_alignParentLeft = "true"/>
    
    <EditText
        android:id = "@+id/useremail"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:inputType = "textEmailAddress"
        android:layout_below = "@+id/textuseremail"
        android:layout_alignParentRight = "true"/>
    
    <TextView
        android:id = "@+id/textuserpass"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/loginpass" 
        android:layout_below = "@+id/useremail"
        android:layout_alignParentLeft = "true"/>
    
    <EditText
        android:id = "@+id/userpass"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:inputType = "textEmailAddress"
        android:layout_below = "@+id/textuserpass"
        android:layout_alignParentRight = "true"/>
   
    <Button
        android:id = "@+id/registerbut"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/registerbut"
        android:onClick="onClickRegisterButton"
        android:layout_below = "@+id/userpass"
        android:layout_alignParentLeft = "true"
        />
    
    <Button
        android:id = "@+id/loginbut"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/loginbut"
        android:onClick="onClickConnectButton"
        android:layout_below = "@+id/userpass"
        android:layout_alignParentRight = "true"
        />
    
    <TextView
        android:id = "@+id/authid"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:layout_below = "@+id/registerbut"
        android:layout_centerHorizontal = "true"
        />
 </RelativeLayout>